# underdogs-bet

./: .cache.sqlite  .env.example  .gitignore  .replit  API_ATS_CAPABILITIES.md  ATS_SYSTEM_COMPLETE_GUIDE.md  ATS_SYSTEM_README.md  AUTO_PICKS_README.md  DAILY_NBA_OPERATIONS.md  DAILY_TRACKING_SETUP.md  DEPRECATED_generate_missing_predictions.py.bak  ENSEMBLE_GUIDE.md  FINAL_PRODUCTION_FILES.md  FIXER_GUIDE.md  ML_IMPROVEMENTS_SUMMARY.md  MODEL_BREAKDOWN_UPDATE.md  NBA_INTEGRITY_FIX_PLAN.md  NCAAB_SETUP.md  NFL72FINAL.py  NFL91.py  NFL_2025.py  NHL70.py  NHL70_ORIGINAL_76PCT.py  NHL70_backup.py  NHL77FINAL.py  NHL77FINAL_broken_backup.py  NHL77JAN1426v1.py  NHL77v1.py  NHL77v3.py  NHLJAN8.py  NHL_V2_API_SUMMARY.txt  PREDICTION_FIX_README.md  PROPRIETARY_ODDS_API_README.md  Procfile  QUICK_START_ATS.md  QUICK_START_ML.md  RETRAINING_SETUP.md  SCHEDULE_UPDATER_README.md  SYSTEM_RULES.md  StartSportsApp.command  (+186 more)
DANGEROUS_SCRIPTS_DISABLED/: load_complete_nba_schedule.py  load_complete_nfl_schedule.py
TO_DELETE/: API_INTEGRATION_SUMMARY.md  NFL72FINAL.py  NHL70.py  NHL_RESULTS_OCT_2025.md  NHL_V2_STATUS_REPORT.md  PRODUCTION_FILES.txt  advanced_flask_app.py  backtest_models.py  calc_accuracy.py  calculate_nfl_accuracy.py  convert_schedules_to_iso.py  fetch_nhl_historical_data.py  fetch_nhl_special_teams.py  final_accuracy.py  fix_mlb_october_predictions.py  generate_nba_predictions.py  import_historical_mlb.py  import_historical_nba.py  import_historical_nfl.py  import_nhl_actual_results.py  import_nhl_results.py  map_team_goalies.py  nba_predictions.csv  nhl_app_original.py  (+18 more)
(+311 files in other folders)
