[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "api>=0.0.7",
    "backtesting>=0.6.5",
    "beautifulsoup4>=4.13.5",
    "colorama>=0.4.6",
    "nba-api>=1.10.0",
    "nfl-data-py>=0.3.2",
    "nhl-api-py>=3.0.2",
    "numpy>=2.3.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "pybaseball>=2.2.7",
    "requests>=2.32.5",
    "schedule>=1.2.2",
    "scikit-learn>=1.7.2",
    "sportsipy>=0.6.0",
    "streamlit>=1.49.1",
    "tensorflow>=2.20.0",
    "tqdm>=4.67.1",
    "trafilatura>=2.0.0",
    "xgboost>=3.0.5",
]
